<resources>
  <string name="app_name" translatable="false">MyStocks</string>
  <string name="price">Price</string>
  <string name="quantity">Quantity</string>
  <string name="date">Date</string>
  <string name="symbol">Symbol</string>
  <string name="buy">Buy</string>
  <string name="sell">Sell</string>
  <string name="save">Save</string>
  <string name="cost">Cost</string>
  <string name="action_add_trade">Add Trade</string>
</resources>
