<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.v7.widget.AppCompatTextView
    android:id="@+id/symbol_tv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_10"
    android:text="@string/symbol"
    android:textColor="@android:color/black" />

  <android.support.v7.widget.AppCompatTextView
    android:id="@+id/quantity_tv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_10"
    android:text="@string/quantity"
    android:layout_below="@id/symbol_tv"
    android:textColor="@android:color/black" />

  <android.support.v7.widget.AppCompatTextView
    android:id="@+id/price_tv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_10"
    android:text="@string/price"
    android:layout_toEndOf="@id/symbol_tv"
    android:textColor="@android:color/black" />

  <!--<android.support.v7.widget.AppCompatTextView
    android:id="@+id/cost_tv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_10"
    android:text="@string/cost"
    android:layout_toEndOf="@id/quantity_tv"
    android:layout_below="@id/price_tv"
    android:textColor="@android:color/black" />-->

</RelativeLayout>
</layout>