<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools">
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_editor_absoluteX="0dp"
    app:layout_editor_absoluteY="80dp"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="80dp"
    tools:context="com.jayplabs.mystocks.presentation.ui.activity.NewStockActivity">

    <android.support.design.widget.TextInputLayout
      android:id="@+id/symbolWrapper"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginTop="16dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginBottom="8dp"
      app:layout_constraintBottom_toTopOf="@+id/quantityWrapper"
      app:layout_constraintVertical_bias="0.47000003">

      <android.support.design.widget.TextInputEditText
        android:id="@+id/symbol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/symbol"
        android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:id="@+id/quantityWrapper"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/symbolWrapper"
      app:layout_constraintHorizontal_bias="1.0"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="8dp"
      app:layout_constraintBottom_toTopOf="@+id/priceWrapper">

      <android.support.design.widget.TextInputEditText
        android:id="@+id/quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:inputType="number" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
      android:id="@+id/priceWrapper"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/quantityWrapper"
      app:layout_constraintHorizontal_bias="1.0"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="8dp"
      app:layout_constraintBottom_toTopOf="@+id/dateWrapper">

      <android.support.design.widget.TextInputEditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:id="@+id/dateWrapper"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/priceWrapper"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="8dp"
      app:layout_constraintBottom_toTopOf="@+id/linearLayout"
      >

      <android.support.design.widget.TextInputEditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:inputType="date" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/save"
      app:layout_constraintTop_toBottomOf="@id/dateWrapper"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp">

      <android.support.v7.widget.AppCompatRadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        tools:text="Buy" />

      <android.support.v7.widget.AppCompatRadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sell"
        tools:text="Sell" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
      android:id="@+id/save"
      android:layout_width="wrap_content"
      android:layout_height="46dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      android:paddingLeft="32dp"
      android:paddingRight="32dp"
      android:text="@string/save"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout"
      tools:layout_editor_absoluteY="314dp" />
    <android.support.constraint.Guideline
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/guideline"
      app:layout_constraintGuide_begin="20dp"
      android:orientation="vertical" />
  </android.support.constraint.ConstraintLayout>
  </ScrollView>
</layout>
